updated outlier info and findings

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -12,9 +12,12 @@
    "metadata": {},
    "source": [
     "# Key Findings\n",
-    "- There is a strong positive correlation between a mouse's weight and the size of the tumor when treated with Capomulin.  The more the mouse weighs, the larger in volume its tumor (as measured during the latest timepoint)\n",
-    "- Ramicane had the lowest variance in data among its mice\n",
-    "- Based on assessment of one mouse treated with Capomulin, the tumor showed significant decline in size over the measure period"
+    "\n",
+    "- Based on assessment of one mouse treated with Capomulin, the tumor showed significant decline in size over the measurement period.\n",
+    "\n",
+    "- There is a strong positive correlation (based on the strong r-value) between a mouse's weight and the size of the tumor when treated with Capomulin.  The more the mouse weighs, the larger in volume its tumor (as measured during the latest timepoint), therefore deeming the drug less effective.  \n",
+    "\n",
+    "- Ramicane had the lowest variance in data among its mice and based on the box plots and data output.  It has a similar efficacy on mouse tumors as Capomulin.  Based on the same information, Infubinol and Ceftamine were not as effective. Overall, with only one outlier in the data, the overall results are consistent and useful in assessing the efficacy of the treatments tested. \n"
    ]
   },
   {
@@ -24,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +218,7 @@
        "[249 rows x 8 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +292,7 @@
        "0             249"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +365,7 @@
        "909                45.0                 0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +801,7 @@
        "[1880 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +857,7 @@
        "0                   248"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,42 +1553,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "----------\n",
       "For Capomulin, the lower quartile of tumor volume is: 32.37735684\n",
       "For Capomulin, the upper quartile of tumor volume is: 40.1592203\n",
       "For Capomulin, the interquartile range of tumor volumes is: 7.781863460000004\n",
       "For Capomulin, the the median of tumor volumes is: 38.125164399999996 \n",
-      "Values below 20.70456164999999 could be outliers.\n",
-      "Values above 51.83201549 could be outliers.\n",
-      "Drug Regimen Capomulin could have a potential outlier of Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
+      "Drug Regimen Capomulin has 0 outliers.\n",
+      "----------\n",
       "For Ramicane, the lower quartile of tumor volume is: 31.56046955\n",
       "For Ramicane, the upper quartile of tumor volume is: 40.65900627\n",
       "For Ramicane, the interquartile range of tumor volumes is: 9.098536719999998\n",
       "For Ramicane, the the median of tumor volumes is: 36.56165229 \n",
-      "Values below 17.912664470000003 could be outliers.\n",
-      "Values above 54.30681135 could be outliers.\n",
-      "Drug Regimen Ramicane could have a potential outlier of Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
+      "Drug Regimen Ramicane has 0 outliers.\n",
+      "----------\n",
       "For Infubinol, the lower quartile of tumor volume is: 54.04860769\n",
       "For Infubinol, the upper quartile of tumor volume is: 65.52574285\n",
       "For Infubinol, the interquartile range of tumor volumes is: 11.477135160000003\n",
       "For Infubinol, the the median of tumor volumes is: 60.16518046 \n",
-      "Values below 36.83290494999999 could be outliers.\n",
-      "Values above 82.74144559000001 could be outliers.\n",
-      "Drug Regimen Infubinol could have a potential outlier of 31    36.321346\n",
-      "Name: Tumor Volume (mm3), dtype: float64\n",
+      "Drug Regimen Infubinol has 1 outliers.\n",
+      "----------\n",
       "For Ceftamin, the lower quartile of tumor volume is: 48.72207785\n",
       "For Ceftamin, the upper quartile of tumor volume is: 64.29983003\n",
       "For Ceftamin, the interquartile range of tumor volumes is: 15.577752179999997\n",
       "For Ceftamin, the the median of tumor volumes is: 59.85195552 \n",
-      "Values below 25.355449580000002 could be outliers.\n",
-      "Values above 87.66645829999999 could be outliers.\n",
-      "Drug Regimen Ceftamin could have a potential outlier of Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
+      "Drug Regimen Ceftamin has 0 outliers.\n"
      ]
     }
    ],
@@ -1609,23 +1607,18 @@
     "    lowerq = quartiles[0.25]\n",
     "    upperq = quartiles[0.75]\n",
     "    iqr = upperq - lowerq\n",
-    "\n",
+    "    print(\"----------\")\n",
     "    print(f\"For {x}, the lower quartile of tumor volume is: {lowerq}\")\n",
     "    print(f\"For {x}, the upper quartile of tumor volume is: {upperq}\")\n",
     "    print(f\"For {x}, the interquartile range of tumor volumes is: {iqr}\")\n",
     "    print(f\"For {x}, the the median of tumor volumes is: {quartiles[0.5]} \")\n",
-    "\n",
-    "    # add subset \n",
     "      \n",
     "    # Determine outliers using upper and lower bounds\n",
     "    lower_bound = lowerq - (1.5*iqr)\n",
     "    upper_bound = upperq + (1.5*iqr)\n",
     "    \n",
-    "    outlier = drug_volume.loc[(drug_volume<lower_bound)|(drug_volume>upper_bound)]\n",
-    "\n",
-    "    print(f\"Values below {lower_bound} could be outliers.\")\n",
-    "    print(f\"Values above {upper_bound} could be outliers.\")\n",
-    "    print(\"Drug Regimen \"+ x + \" could have a potential outlier of \" + str(outlier))"
+    "    outlier = drug_volume.loc[(drug_volume<lower_bound)|(drug_volume>upper_bound)].count()\n",
+    "    print(\"Drug Regimen \"+ x + \" has \" + str(outlier) + \" outliers.\")"
    ]
   },
   {
